--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,22 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <string name="uso_Particular">Particular</string>
+    <string name="uso_Publico">Publico</string>
+    <string-array name="Uso">
+        <item>@string/uso_Particular</item>
+        <item>@string/uso_Publico</item>
+    </string-array>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="txtTituloAgregarVehiculo">AGREGAR VEHICULO</string>
+    <string name="placa">Placa</string>
+    <string name="marca">Marca</string>
+    <string name="linea">Linea</string>
+    <string name="modelo">Modelo</string>
+    <string name="btnAgregarVehiculo">Agregar</string>
+    <string name="btnLimpiarVehiculo">Limpiar</string>
+    <string name="mensaje_guardado_correcto">Vehiculo guardado Exitosamente</string>
+
 </resources>
