Interfaz Vehiculo y Detalle terminada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="btnAgregarVehiculo">Agregar</string>
     <string name="btnLimpiarVehiculo">Limpiar</string>
     <string name="mensaje_guardado_correcto">Vehiculo guardado Exitosamente</string>
+    <string name="titulo_detalle">Detalle Vehiculo</string>
 
 </resources>
