--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="pregunta_mensaje_eliminar">¿Está seguro que desea eliminar a este vehiculo?</string>
     <string name="opcion_si">Si</string>
     <string name="opcion_no">No</string>
+    <string name="titulo_ventana_seleccionar_foto">Seleccione la foto</string>
 
 </resources>
