--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,27 @@
 <resources>
     <string name="app_name">TallerMaterialDesign</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Opciones</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label">Primer fragmento</string>
+    <string name="second_fragment_label">Segundo fragmento</string>
+    <string name="next">Siguiente</string>
+    <string name="previous">Previo</string>
 
     <string name="uso_Particular">Particular</string>
-    <string name="uso_Publico">Publico</string>
+    <string name="uso_Publico">Público</string>
     <string-array name="Uso">
         <item>@string/uso_Particular</item>
         <item>@string/uso_Publico</item>
     </string-array>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_first_fragment">Hola primer fragmento</string>
+    <string name="hello_second_fragment">" Hola segundo fragmento. Arg:% 1 $ s"</string>
     <string name="txtTituloAgregarVehiculo">AGREGAR VEHICULO</string>
     <string name="placa">Placa</string>
     <string name="marca">Marca</string>
     <string name="linea">Linea</string>
     <string name="modelo">Modelo</string>
+    <string name="uso">Uso</string>
     <string name="btnAgregarVehiculo">Agregar</string>
     <string name="btnLimpiarVehiculo">Limpiar</string>
     <string name="mensaje_guardado_correcto">Vehiculo guardado Exitosamente</string>
@@ -31,5 +32,7 @@
     <string name="opcion_si">Si</string>
     <string name="opcion_no">No</string>
     <string name="titulo_ventana_seleccionar_foto">Seleccione la foto</string>
+    <string name="placa_duplicada">La placa ya se encuentra registrada</string>
+    <string name="error_CampoVacio">Campo vacio</string>
 
 </resources>
